--- a/css/styles.css
+++ b/css/styles.css
@@ -1,79 +1,34 @@
 body{
     font-family: "Montserrat";
+    text-align: center;
 }
-#title {
-    background-color: #ff4c68;
-    color: #fff;
-}
-h1{
-    font-family: "Montserrat", sans-serif;
-    font-size: 3.5rem;
-    line-height: 1.5;
+h1, h2, h3, h4, h5, h6{
+    font-family: "Montserrat-Bold", sans-serif;
 }
 p{
     color: darkgray;
 }
-h2{
-    font-family: "Montserrat", sans-serif;
-    font-size: 2.35rem;
+
+#title {
+    background-color: #ff4c68;
+    color: #fff;
+    text-align: left;
+}
+.big-heading{
+    font-family: "Montserrat-Black", sans-serif;
+    font-size: 3.5rem;
     line-height: 1.5;
 }
-h3{
-    font-family: "Montserrat";
-    font-weight: 700;
-    font-size: 1.5rem;
-}
-
-#testimonials{
-    text-align: center;
-    padding: 7% 15%;
-    background-color: #ff4c68;
-    color: white;
-}
-.testimonial-img{
-    width: 90px;
-    border-radius: 100%;
-    margin: 20px;
-}
-.carousel-item{
-    padding:7% 15%;
-}
-#press
-{
-    background-color: #ff4c68;
-    text-align: center;
-    padding-bottom: 3%;
-}
-.press-logo{
-    width: 15%;
-    margin: 20px 20px 50px ;
-
-}
-#features{
-    padding: 7% 15%;
-}
-
-.icon{
-    color: #ff4c68;
-    margin-bottom: 1rem;
-}
-.icon:hover{
-    color: #fa2144;
-
-}
-.validate{
-    text-align: center;
+.section-heading{
+    font-size: 3rem;
+    line-height: 1.5;
 }
 .title-img{
-    width: 60%;
+    width: 20%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 25%;
 }
-/* download btn */
-.download-button{
-    margin: 5% 3% 5% 0;
-}
-
-
 /* nav bars */
 .nav-item{
     padding:0 18px;
@@ -91,6 +46,97 @@ h3{
     font-size: 2.5rem;
     font-weight: bold;
 }
+/*features*/
+#features{
+    padding: 7% 15%;
+    background-color: #ffffff;
+    position: relative;
+    z-index: 1;
+}
+.feature-title{
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+.icon{
+    color: #ff4c68;
+    margin-bottom: 1rem;
+}
+.icon:hover{
+    color: #fa2144;
+}
+
+/* pricing */
+#pricing{
+    padding: 100px;
+}
+.price-text{
+    font-size: 3rem;
+    line-height: 1.5;
+}
+.pricing-col{
+    padding: 3% 2%;
+}
+
+
+/* testimonials */
+#testimonials{
+    padding: 7% 15%;
+    background-color: #ff4c68;
+    color: white;
+}
+.testimonial-text{
+    font-size: 3rem;
+    line-height: 1.5;
+}
+#press
+ {
+     background-color: #ff4c68;
+     padding-bottom: 3%;
+ }
+.press-logo{
+    width: 15%;
+    margin: 20px 20px 50px ;
+
+}
+.testimonial-img{
+    width: 90px;
+    border-radius: 100%;
+    margin: 20px;
+}
+.carousel-item{
+    padding:7% 15%;
+}
+
+/*footer*/
+#footer{
+    padding: 7% 15%;
+}
+#cta
+{
+    background-color: #ff4c68;
+    color: white;
+    padding: 7% 15%;
+}
+
+.social-icon{
+    margin: 20px 10px;
+}
+/* download btn */
+.download-button{
+    margin: 5% 3% 5% 0;
+}
+
 .container-fluid{
-    padding: 3% 15%;
+    padding: 3% 15% 8%;
+}
+@media (max-width: 1028px) {
+    .title-img {
+        position: static;
+        transform: rotate(0);
+        width: 160px;
+    }
+    #title{
+        text-align: center;
+    }
+
 }
